# wilty

./: .gitignore  .stylelintrc.json  README.md  config.py  content.sql  engine.py  eslint.config.js  lint.sh  main.py  package-lock.json  package.json  pyproject.toml  schema.sql
.github/workflows/: ci.yml
static/: admin.html  admin.js  app.js  auth.js  changelog.html  finished.html  finished.js  game.html  game.js  index.html  lobby.html  lobby.js  style.css  utils.js
