[project]
name = "wilty"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn>=0.47.0",
]

[tool.ruff]
# Target Python version
target-version = "py311"

[tool.ruff.lint]
# Enable strict rule subsets
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # Pyflakes
    "I",     # isort
    "C90",   # mccabe complexity
    "B",     # flake8-bugbear
    "UP",    # pyupgrade
    "RUF",   # Ruff-specific rules
]
ignore = [
    "E501",  # ignore line length limits (too verbose on database query strings)
]

[tool.ruff.lint.mccabe]
max-complexity = 15
